--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
     "mongodb": "1.4",
-    "monk": "*"
+    "monk": "*",
+    "precommit-hook": "1.0.7"
   }
 }
